[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picker" type="Tabs" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Sections" type="VBoxContainer" parent="Tabs/Picker"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" type="VBoxContainer" parent="Tabs/Picker/Sections"]
margin_right = 292.0
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentCollection" type="Label" parent="Tabs/Picker/Sections/Current"]
margin_right = 292.0
margin_bottom = 31.0
text = "Current collection: 
blaaaaa"
align = 1

[node name="Path" type="HBoxContainer" parent="Tabs/Picker/Sections/Current"]
margin_top = 35.0
margin_right = 292.0
margin_bottom = 59.0

[node name="CurrentPath" type="LineEdit" parent="Tabs/Picker/Sections/Current/Path"]
margin_right = 241.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="OpenFolderButton" type="Button" parent="Tabs/Picker/Sections/Current/Path"]
margin_left = 245.0
margin_right = 292.0
margin_bottom = 24.0
text = "Open"

[node name="PlayControls" type="HBoxContainer" parent="Tabs/Picker/Sections/Current"]
margin_top = 63.0
margin_right = 292.0
margin_bottom = 113.0

[node name="PlayButton" type="Button" parent="Tabs/Picker/Sections/Current/PlayControls"]
margin_right = 264.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
text = "Play"

[node name="AutoPlayCheckBox" type="CheckBox" parent="Tabs/Picker/Sections/Current/PlayControls"]
margin_left = 268.0
margin_right = 292.0
margin_bottom = 50.0
align = 2

[node name="PlayControls2" type="HBoxContainer" parent="Tabs/Picker/Sections/Current"]
margin_top = 117.0
margin_right = 292.0
margin_bottom = 137.0

[node name="PrevButton" type="Button" parent="Tabs/Picker/Sections/Current/PlayControls2"]
margin_right = 144.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Prev"

[node name="NextButton" type="Button" parent="Tabs/Picker/Sections/Current/PlayControls2"]
margin_left = 148.0
margin_right = 292.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Next"

[node name="Random" type="VBoxContainer" parent="Tabs/Picker/Sections"]
margin_top = 141.0
margin_right = 292.0
margin_bottom = 226.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tabs/Picker/Sections/Random"]
margin_right = 292.0
margin_bottom = 31.0
text = "
Random"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Tabs/Picker/Sections/Random"]
margin_top = 35.0
margin_right = 292.0
margin_bottom = 85.0

[node name="RandomFromCollectionButton" type="Button" parent="Tabs/Picker/Sections/Random/HBoxContainer"]
margin_right = 144.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
text = "? from collection"

[node name="RandomFromFolder" type="Button" parent="Tabs/Picker/Sections/Random/HBoxContainer"]
margin_left = 148.0
margin_right = 292.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
text = "? from current folder"
clip_text = true

[node name="Search" type="VBoxContainer" parent="Tabs/Picker/Sections"]
margin_top = 230.0
margin_right = 292.0
margin_bottom = 564.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tabs/Picker/Sections/Search"]
margin_right = 292.0
margin_bottom = 31.0
text = "
Search collection"
align = 1

[node name="Bar" type="LineEdit" parent="Tabs/Picker/Sections/Search"]
margin_top = 35.0
margin_right = 292.0
margin_bottom = 59.0
size_flags_horizontal = 3

[node name="Result" type="ItemList" parent="Tabs/Picker/Sections/Search"]
margin_top = 63.0
margin_right = 292.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Collections" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sections" type="VBoxContainer" parent="Tabs/Collections"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tabs/Collections/Sections"]
margin_right = 392.0
margin_bottom = 14.0
text = "Current Collection"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentCollection" type="HBoxContainer" parent="Tabs/Collections/Sections"]
margin_top = 18.0
margin_right = 392.0
margin_bottom = 371.0
size_flags_vertical = 3

[node name="FoldersList" type="ItemList" parent="Tabs/Collections/Sections/CurrentCollection"]
margin_right = 280.0
margin_bottom = 353.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Tabs/Collections/Sections/CurrentCollection"]
margin_left = 284.0
margin_right = 392.0
margin_bottom = 353.0

[node name="AddFolderButton" type="Button" parent="Tabs/Collections/Sections/CurrentCollection/Buttons"]
margin_right = 108.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add folder"

[node name="RemoveFolderButton" type="Button" parent="Tabs/Collections/Sections/CurrentCollection/Buttons"]
margin_top = 119.0
margin_right = 108.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Remove Folder"

[node name="SaveCollectionButton" type="Button" parent="Tabs/Collections/Sections/CurrentCollection/Buttons"]
margin_top = 238.0
margin_right = 108.0
margin_bottom = 353.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"

[node name="Label2" type="Label" parent="Tabs/Collections/Sections"]
margin_top = 375.0
margin_right = 392.0
margin_bottom = 406.0
text = "
All Collections"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collections" type="HBoxContainer" parent="Tabs/Collections/Sections"]
margin_top = 410.0
margin_right = 392.0
margin_bottom = 764.0
size_flags_vertical = 3

[node name="CollectionsList" type="ItemList" parent="Tabs/Collections/Sections/Collections"]
margin_right = 324.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Tabs/Collections/Sections/Collections"]
margin_left = 328.0
margin_right = 392.0
margin_bottom = 354.0

[node name="Load" type="Button" parent="Tabs/Collections/Sections/Collections/Buttons"]
margin_right = 64.0
margin_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load"

[node name="Remove" type="Button" parent="Tabs/Collections/Sections/Collections/Buttons"]
margin_top = 179.0
margin_right = 64.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Remove"

[node name="History" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Items" type="ItemList" parent="Tabs/History"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 4.0
margin_top = 544.0
margin_right = 360.0
margin_bottom = 744.0
rect_min_size = Vector2( 200, 200 )
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
current_dir = "/Users/pmgru/Documents/Docs/Dev/Projects/Coding/Godot/MediaPicker"
current_path = "/Users/pmgru/Documents/Docs/Dev/Projects/Coding/Godot/MediaPicker/"

[connection signal="pressed" from="Tabs/Picker/Sections/Current/Path/OpenFolderButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Tabs/Picker/Sections/Current/Path/OpenFolderButton" to="." method="_on_OpenFolderButton_pressed"]
[connection signal="item_activated" from="Tabs/Picker/Sections/Search/Result" to="." method="_on_ItemList_item_activated"]
[connection signal="pressed" from="Tabs/Collections/Sections/CurrentCollection/Buttons/AddFolderButton" to="." method="_on_Button_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
